@@ -69,6 +69,7 @@ Misc:
  - GBA Memory: Optimize Load-/StoreMultiple
  - 3DS: Adjustable filering
  - PSP2: Screenshots are now saved into the Photo Gallery
+ - Qt: Make reseting when pasued frame-accurate
 
 0.4.1: (2016-07-11)
 Bugfixes:
